@@ -1,3 +1,4 @@
+- fixed mini game Invaders (2024/04/05 MS)
 - workaround: reset ball if in brick before getting target (2024/04/05 MS)
 - show trajectory of balls with debugging enabled (2024/04/05 MS)
 - reenabled bug report as configureable option (2024/04/05 MS)
